# iam-minify

./: .gitignore  LICENSE  Makefile  Pipfile  README.md  example.json  main.py  pyproject.toml  setup.cfg
.github/workflows/: pypi-publish.yml
actions/: lambda.json
src/: __main__.py  actions.py  cli.py  config.py  file_helpers.py  optimize.py  service_actions.py  trie.py  truncate.py
src/_internal/: trie.py  truncate.py
tests/: test_optimize.py  test_trie.py  test_truncate.py
