[metadata]
name = iam-minifier
version = 0.0.1
description = Truncate IAM actions using wildcards to save up as many characters as possible without granting unintended permissions
author = Jakub Duchon
author_email = jakub@duchy.sk
license = MIT
url = https://github.com/imduchy/truncate-iam-actions

[options]
packages = find:
install_requires =
    requests

[options.entry_points]
console_scripts =
    iam-minifier = src.__main__:main 
