[metadata]
name = iam-minify
version = 0.0.4
description = Minify IAM actions using wildcards to save up as many characters as possible without granting unintended permissions
long_description = file: README.md
long_description_content_type = text/markdown
author = imduchy
author_email = jakub@duchy.sk
license = MIT
url = https://github.com/imduchy/iam-minify
keywords = AWS IAM policy minify

[options]
packages = find:
install_requires =
    requests

[options.entry_points]
console_scripts =
    iam-minify = src.__main__:main 
